--- a/action.yml
+++ b/action.yml
@@ -27,7 +27,10 @@ runs:
     - name: Dispatch Event
       shell: bash
       run: |
-        curl -X POST https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repository }}/dispatches \
-        -H 'Accept: application/vnd.github.everest-preview+json' \
-        -u ${{ inputs.owner }}:${{ inputs.token }} \
-        --data '{"event_type": "${{ inputs.event }}", "client_payload": ${{ inputs.payload }}}'
+        curl -L \
+        -X POST \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ inputs.token }}"\
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repository }}/dispatches \
+        -d '{"event_type":"${{ inputs.event }}","client_payload":${{ inputs.payload }}}'
