--- a/action.yml
+++ b/action.yml
@@ -26,4 +26,9 @@ runs:
   steps:
     - name: Dispatch Event
       shell: bash
-      run: curl -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ inputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repository }}/dispatches -d '{"event_type":"${{ inputs.event }}","client_payload":${{ inputs.payload }}}'
+      run: |
+        curl -L -X POST -H "Accept: application/vnd.github+json" \
+        -H "Authorization: token ${{ inputs.token }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repository }}/dispatches \
+        -d '{"event_type":"${{ inputs.event }}","client_payload":${{ inputs.payload }}}'
