--- a/action.yml
+++ b/action.yml
@@ -31,4 +31,5 @@ runs:
         -H "Authorization: token ${{ inputs.token }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
         https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repository }}/dispatches \
-        -d '{"event_type":"${{ inputs.event }}","client_payload":${{ inputs.payload }}}'
+        -d '{"event_type":"${{ inputs.event }}","client_payload":${{ inputs.payload }}}' \
+        --fail
